Compiladores2/Inter/AProyecto2/Contenido/Analizadores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> lista_metodos
Rule 2     lista_metodos -> lista_metodos metodos
Rule 3     lista_metodos -> metodos
Rule 4     metodos -> instruccion
Rule 5     metodos -> STRUCT IDENTIFICADOR LLAA muhco_decla_struct LLAC
Rule 6     muhco_decla_struct -> muhco_decla_struct decla_struct
Rule 7     muhco_decla_struct -> decla_struct
Rule 8     decla_struct -> tipo mdecla PUNTOCOMA
Rule 9     metodos -> tipo IDENTIFICADOR PARA parametros PARC instruccion
Rule 10    parametros -> parametros COMA tipo IDENTIFICADOR
Rule 11    parametros -> tipo IDENTIFICADOR
Rule 12    parametros -> <empty>
Rule 13    instrucciones -> instrucciones instruccion
Rule 14    instrucciones -> instruccion
Rule 15    instruccion -> IDENTIFICADOR DOBLEPUNTO
Rule 16    instruccion -> GOTO IDENTIFICADOR PUNTOCOMA
Rule 17    instruccion -> LLAA instrucciones LLAC
Rule 18    instruccion -> LLAA LLAC
Rule 19    instruccion -> instruccion_ciclo
Rule 20    instruccion -> instruccion_abierta
Rule 21    instruccion -> instruccion_llamar_metodo
Rule 22    instruccion_llamar_metodo -> BREAK PUNTOCOMA
Rule 23    instruccion_llamar_metodo -> CONTINUE PUNTOCOMA
Rule 24    instruccion_llamar_metodo -> RETURN expresiones PUNTOCOMA
Rule 25    instruccion_llamar_metodo -> IDENTIFICADOR PARA listado_parametros PARC PUNTOCOMA
Rule 26    instruccion_llamar_metodo -> PRINTF PARA listado_parametros PARC PUNTOCOMA
Rule 27    listado_parametros -> listado_parametros COMA expresiones
Rule 28    listado_parametros -> expresiones
Rule 29    listado_parametros -> <empty>
Rule 30    instruccion_ciclo -> WHILE PARA expresiones PARC instruccion
Rule 31    instruccion_ciclo -> DO instruccion WHILE PARA expresiones PARC PUNTOCOMA
Rule 32    instruccion_ciclo -> variaciones
Rule 33    variaciones -> IDENTIFICADOR MASDOBLE
Rule 34    variaciones -> IDENTIFICADOR MENOSDOBLE
Rule 35    instruccion_ciclo -> FOR PARA instruccion expresiones PUNTOCOMA finfor PARC instruccion
Rule 36    finfor -> instruccion
Rule 37    finfor -> <empty>
Rule 38    instruccion_abierta -> IF PARA expresiones PARC instruccion
Rule 39    instruccion_abierta -> IF PARA expresiones PARC instruccion ELSE instruccion
Rule 40    instruccion_abierta -> SWITCH PARA expresiones PARC LLAA switch_corpo LLAC
Rule 41    switch_corpo -> switch_corpo switch_corpo_salida
Rule 42    switch_corpo -> switch_corpo_salida
Rule 43    switch_corpo_salida -> CASE expresiones DOBLEPUNTO instrucciones
Rule 44    switch_corpo_salida -> DEFAULT DOBLEPUNTO instrucciones
Rule 45    tipo -> CHAR
Rule 46    tipo -> INT
Rule 47    tipo -> DOUBLE
Rule 48    tipo -> FLOAT
Rule 49    corche -> corche CORA expresiones CORC
Rule 50    corche -> <empty>
Rule 51    instruccion -> STRUCT IDENTIFICADOR IDENTIFICADOR corche PUNTOCOMA
Rule 52    instruccion -> IDENTIFICADOR PUNTO IDENTIFICADOR m_igual expresiones PUNTOCOMA
Rule 53    instruccion -> mdecla corche arre_str_val m_igual expresiones PUNTOCOMA
Rule 54    arre_str_val -> PUNTO IDENTIFICADOR
Rule 55    arre_str_val -> <empty>
Rule 56    decla_con -> tipo mdecla IGUAL expresiones masinde PUNTOCOMA
Rule 57    instruccion -> def_decla
Rule 58    def_decla -> decla_con
Rule 59    def_decla -> decla_epsi
Rule 60    decla_epsi -> tipo mdecla PUNTOCOMA
Rule 61    decla_epsi -> tipo mdecla corchelle pob_val PUNTOCOMA
Rule 62    pob_val -> IGUAL LLAA val_arri LLAC
Rule 63    pob_val -> IGUAL expresiones
Rule 64    pob_val -> <empty>
Rule 65    val_arri -> val_arri COMA expresiones
Rule 66    val_arri -> expresiones
Rule 67    masinde -> masinde COMA mdecla IGUAL expresiones
Rule 68    masinde -> <empty>
Rule 69    m_igual -> IGUAL
Rule 70    m_igual -> MASIGUAL
Rule 71    m_igual -> MENOSIGUAL
Rule 72    m_igual -> PORIGUAL
Rule 73    m_igual -> DIVIGUAL
Rule 74    m_igual -> MODIGUAL
Rule 75    m_igual -> SHIFTIIGUAL
Rule 76    m_igual -> SHIFTDIGUAL
Rule 77    m_igual -> ANDIGUAL
Rule 78    m_igual -> XORIGUAL
Rule 79    m_igual -> ORIGUAL
Rule 80    mdecla -> mdecla COMA IDENTIFICADOR
Rule 81    mdecla -> IDENTIFICADOR
Rule 82    expresiones -> expresiones OR expresiones
Rule 83    expresiones -> expresiones AND expresiones
Rule 84    expresiones -> expresiones ORB expresiones
Rule 85    expresiones -> expresiones XORB expresiones
Rule 86    expresiones -> expresiones ANDB expresiones
Rule 87    expresiones -> expresiones IGUALDOBLE expresiones
Rule 88    expresiones -> expresiones DIFERENTE expresiones
Rule 89    expresiones -> expresiones MAYOR expresiones
Rule 90    expresiones -> expresiones MAYORIGUAL expresiones
Rule 91    expresiones -> expresiones MENOR expresiones
Rule 92    expresiones -> expresiones MENORIGUAL expresiones
Rule 93    expresiones -> expresiones SHIFTI expresiones
Rule 94    expresiones -> expresiones SHIFTD expresiones
Rule 95    expresiones -> expresiones MAS expresiones
Rule 96    expresiones -> expresiones MENOS expresiones
Rule 97    expresiones -> expresiones POR expresiones
Rule 98    expresiones -> expresiones MOD expresiones
Rule 99    expresiones -> expresiones DIVIDIDO expresiones
Rule 100   expresiones -> expresiones INTERROGACION expresiones DOBLEPUNTO expresiones
Rule 101   expresiones -> MENOS expresiones
Rule 102   expresiones -> MAS expresiones
Rule 103   expresiones -> NOTB expresiones
Rule 104   expresiones -> ANDB expresiones
Rule 105   expresiones -> NOT expresiones
Rule 106   expresiones -> valor
Rule 107   expresiones -> PARA expresiones PARC
Rule 108   valor -> ENTERO
Rule 109   valor -> DECIMAL
Rule 110   valor -> CADENA
Rule 111   valor -> IDENTIFICADOR
Rule 112   corchelle -> corchelle CORA expresiones CORC
Rule 113   corchelle -> CORA expresiones CORC
Rule 114   valor -> IDENTIFICADOR corchelle
Rule 115   expresiones -> IDENTIFICADOR MASDOBLE
Rule 116   expresiones -> IDENTIFICADOR MENOSDOBLE
Rule 117   valor -> IDENTIFICADOR PUNTO IDENTIFICADOR
Rule 118   valor -> IDENTIFICADOR corchelle PUNTO IDENTIFICADOR
Rule 119   valor -> CASTINT expresiones
Rule 120   valor -> CASTCHAR expresiones
Rule 121   valor -> CASTFLOAT expresiones
Rule 122   valor -> CASTDOUBLE expresiones
Rule 123   valor -> SCANF PARA PARC
Rule 124   valor -> IDENTIFICADOR PARA listado_parametros PARC

Terminals, with rules where they appear

AND                  : 83
ANDB                 : 86 104
ANDIGUAL             : 77
BREAK                : 22
CADENA               : 110
CASE                 : 43
CASTCHAR             : 120
CASTDOUBLE           : 122
CASTFLOAT            : 121
CASTINT              : 119
CHAR                 : 45
COMA                 : 10 27 65 67 80
CONTINUE             : 23
CORA                 : 49 112 113
CORC                 : 49 112 113
DECIMAL              : 109
DEFAULT              : 44
DIFERENTE            : 88
DIVIDIDO             : 99
DIVIGUAL             : 73
DO                   : 31
DOBLEPUNTO           : 15 43 44 100
DOUBLE               : 47
ELSE                 : 39
ENTERO               : 108
FLOAT                : 48
FOR                  : 35
GOTO                 : 16
IDENTIFICADOR        : 5 9 10 11 15 16 25 33 34 51 51 52 52 54 80 81 111 114 115 116 117 117 118 118 124
IF                   : 38 39
IGUAL                : 56 62 63 67 69
IGUALDOBLE           : 87
INT                  : 46
INTERROGACION        : 100
LLAA                 : 5 17 18 40 62
LLAC                 : 5 17 18 40 62
MAS                  : 95 102
MASDOBLE             : 33 115
MASIGUAL             : 70
MAYOR                : 89
MAYORIGUAL           : 90
MENOR                : 91
MENORIGUAL           : 92
MENOS                : 96 101
MENOSDOBLE           : 34 116
MENOSIGUAL           : 71
MOD                  : 98
MODIGUAL             : 74
NOT                  : 105
NOTB                 : 103
OR                   : 82
ORB                  : 84
ORIGUAL              : 79
PARA                 : 9 25 26 30 31 35 38 39 40 107 123 124
PARC                 : 9 25 26 30 31 35 38 39 40 107 123 124
POR                  : 97
PORIGUAL             : 72
PRINTF               : 26
PUNTO                : 52 54 117 118
PUNTOCOMA            : 8 16 22 23 24 25 26 31 35 51 52 53 56 60 61
RETURN               : 24
SCANF                : 123
SHIFTD               : 94
SHIFTDIGUAL          : 76
SHIFTI               : 93
SHIFTIIGUAL          : 75
STRUCT               : 5 51
SWITCH               : 40
WHILE                : 30 31
XORB                 : 85
XORIGUAL             : 78
error                : 

Nonterminals, with rules where they appear

arre_str_val         : 53
corche               : 49 51 53
corchelle            : 61 112 114 118
decla_con            : 58
decla_epsi           : 59
decla_struct         : 6 7
def_decla            : 57
expresiones          : 24 27 28 30 31 35 38 39 40 43 49 52 53 56 63 65 66 67 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 100 101 102 103 104 105 107 112 113 119 120 121 122
finfor               : 35
inicio               : 0
instruccion          : 4 9 13 14 30 31 35 35 36 38 39 39
instruccion_abierta  : 20
instruccion_ciclo    : 19
instruccion_llamar_metodo : 21
instrucciones        : 13 17 43 44
lista_metodos        : 1 2
listado_parametros   : 25 26 27 124
m_igual              : 52 53
masinde              : 56 67
mdecla               : 8 53 56 60 61 67 80
metodos              : 2 3
muhco_decla_struct   : 5 6
parametros           : 9 10
pob_val              : 61
switch_corpo         : 40 41
switch_corpo_salida  : 41 42
tipo                 : 8 9 10 11 56 60 61
val_arri             : 62 65
valor                : 106
variaciones          : 32

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . lista_metodos
    (2) lista_metodos -> . lista_metodos metodos
    (3) lista_metodos -> . metodos
    (4) metodos -> . instruccion
    (5) metodos -> . STRUCT IDENTIFICADOR LLAA muhco_decla_struct LLAC
    (9) metodos -> . tipo IDENTIFICADOR PARA parametros PARC instruccion
    (15) instruccion -> . IDENTIFICADOR DOBLEPUNTO
    (16) instruccion -> . GOTO IDENTIFICADOR PUNTOCOMA
    (17) instruccion -> . LLAA instrucciones LLAC
    (18) instruccion -> . LLAA LLAC
    (19) instruccion -> . instruccion_ciclo
    (20) instruccion -> . instruccion_abierta
    (21) instruccion -> . instruccion_llamar_metodo
    (51) instruccion -> . STRUCT IDENTIFICADOR IDENTIFICADOR corche PUNTOCOMA
    (52) instruccion -> . IDENTIFICADOR PUNTO IDENTIFICADOR m_igual expresiones PUNTOCOMA
    (53) instruccion -> . mdecla corche arre_str_val m_igual expresiones PUNTOCOMA
    (57) instruccion -> . def_decla
    (45) tipo -> . CHAR
    (46) tipo -> . INT
    (47) tipo -> . DOUBLE
    (48) tipo -> . FLOAT
    (30) instruccion_ciclo -> . WHILE PARA expresiones PARC instruccion
    (31) instruccion_ciclo -> . DO instruccion WHILE PARA expresiones PARC PUNTOCOMA
    (32) instruccion_ciclo -> . variaciones
    (35) instruccion_ciclo -> . FOR PARA instruccion expresiones PUNTOCOMA finfor PARC instruccion
    (38) instruccion_abierta -> . IF PARA expresiones PARC instruccion
    (39) instruccion_abierta -> . IF PARA expresiones PARC instruccion ELSE instruccion
    (40) instruccion_abierta -> . SWITCH PARA expresiones PARC LLAA switch_corpo LLAC
    (22) instruccion_llamar_metodo -> . BREAK PUNTOCOMA
    (23) instruccion_llamar_metodo -> . CONTINUE PUNTOCOMA
    (24) instruccion_llamar_metodo -> . RETURN expresiones PUNTOCOMA
    (25) instruccion_llamar_metodo -> . IDENTIFICADOR PARA listado_parametros PARC PUNTOCOMA
    (26) instruccion_llamar_metodo -> . PRINTF PARA listado_parametros PARC PUNTOCOMA
    (80) mdecla -> . mdecla COMA IDENTIFICADOR
    (81) mdecla -> . IDENTIFICADOR
    (58) def_decla -> . decla_con
    (59) def_decla -> . decla_epsi
    (33) variaciones -> . IDENTIFICADOR MASDOBLE
    (34) variaciones -> . IDENTIFICADOR MENOSDOBLE
    (56) decla_con -> . tipo mdecla IGUAL expresiones masinde PUNTOCOMA
    (60) decla_epsi -> . tipo mdecla PUNTOCOMA
    (61) decla_epsi -> . tipo mdecla corchelle pob_val PUNTOCOMA

    STRUCT          shift and go to state 5
    IDENTIFICADOR   shift and go to state 6
    GOTO            shift and go to state 9
    LLAA            shift and go to state 7
    CHAR            shift and go to state 15
    INT             shift and go to state 16
    DOUBLE          shift and go to state 17
    FLOAT           shift and go to state 18
    WHILE           shift and go to state 19
    DO              shift and go to state 20
    FOR             shift and go to state 22
    IF              shift and go to state 23
    SWITCH          shift and go to state 24
    BREAK           shift and go to state 25
    CONTINUE        shift and go to state 26
    RETURN          shift and go to state 27
    PRINTF          shift and go to state 28

    inicio                         shift and go to state 1
    lista_metodos                  shift and go to state 2
    metodos                        shift and go to state 3
    instruccion                    shift and go to state 4
    tipo                           shift and go to state 8
    instruccion_ciclo              shift and go to state 10
    instruccion_abierta            shift and go to state 11
    instruccion_llamar_metodo      shift and go to state 12
    mdecla                         shift and go to state 13
    def_decla                      shift and go to state 14
    variaciones                    shift and go to state 21
    decla_con                      shift and go to state 29
    decla_epsi                     shift and go to state 30

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> lista_metodos .
    (2) lista_metodos -> lista_metodos . metodos
    (4) metodos -> . instruccion
    (5) metodos -> . STRUCT IDENTIFICADOR LLAA muhco_decla_struct LLAC
    (9) metodos -> . tipo IDENTIFICADOR PARA parametros PARC instruccion
    (15) instruccion -> . IDENTIFICADOR DOBLEPUNTO
    (16) instruccion -> . GOTO IDENTIFICADOR PUNTOCOMA
    (17) instruccion -> . LLAA instrucciones LLAC
    (18) instruccion -> . LLAA LLAC
    (19) instruccion -> . instruccion_ciclo
    (20) instruccion -> . instruccion_abierta
    (21) instruccion -> . instruccion_llamar_metodo
    (51) instruccion -> . STRUCT IDENTIFICADOR IDENTIFICADOR corche PUNTOCOMA
    (52) instruccion -> . IDENTIFICADOR PUNTO IDENTIFICADOR m_igual expresiones PUNTOCOMA
    (53) instruccion -> . mdecla corche arre_str_val m_igual expresiones PUNTOCOMA
    (57) instruccion -> . def_decla
    (45) tipo -> . CHAR
    (46) tipo -> . INT
    (47) tipo -> . DOUBLE
    (48) tipo -> . FLOAT
    (30) instruccion_ciclo -> . WHILE PARA expresiones PARC instruccion
    (31) instruccion_ciclo -> . DO instruccion WHILE PARA expresiones PARC PUNTOCOMA
    (32) instruccion_ciclo -> . variaciones
    (35) instruccion_ciclo -> . FOR PARA instruccion expresiones PUNTOCOMA finfor PARC instruccion
    (38) instruccion_abierta -> . IF PARA expresiones PARC instruccion
    (39) instruccion_abierta -> . IF PARA expresiones PARC instruccion ELSE instruccion
    (40) instruccion_abierta -> . SWITCH PARA expresiones PARC LLAA switch_corpo LLAC
    (22) instruccion_llamar_metodo -> . BREAK PUNTOCOMA
    (23) instruccion_llamar_metodo -> . CONTINUE PUNTOCOMA
    (24) instruccion_llamar_metodo -> . RETURN expresiones PUNTOCOMA
    (25) instruccion_llamar_metodo -> . IDENTIFICADOR PARA listado_parametros PARC PUNTOCOMA
    (26) instruccion_llamar_metodo -> . PRINTF PARA listado_parametros PARC PUNTOCOMA
    (80) mdecla -> . mdecla COMA IDENTIFICADOR
    (81) mdecla -> . IDENTIFICADOR
    (58) def_decla -> . decla_con
    (59) def_decla -> . decla_epsi
    (33) variaciones -> . IDENTIFICADOR MASDOBLE
    (34) variaciones -> . IDENTIFICADOR MENOSDOBLE
    (56) decla_con -> . tipo mdecla IGUAL expresiones masinde PUNTOCOMA
    (60) decla_epsi -> . tipo mdecla PUNTOCOMA
    (61) decla_epsi -> . tipo mdecla corchelle pob_val PUNTOCOMA

    $end            reduce using rule 1 (inicio -> lista_metodos .)
    STRUCT          shift and go to state 5
    IDENTIFICADOR   shift and go to state 6
    GOTO            shift and go to state 9
    LLAA            shift and go to state 7
    CHAR            shift and go to state 15
    INT             shift and go to state 16
    DOUBLE          shift and go to state 17
    FLOAT           shift and go to state 18
    WHILE           shift and go to state 19
    DO              shift and go to state 20
    FOR             shift and go to state 22
    IF              shift and go to state 23
    SWITCH          shift and go to state 24
    BREAK           shift and go to state 25
    CONTINUE        shift and go to state 26
    RETURN          shift and go to state 27
    PRINTF          shift and go to state 28

    metodos                        shift and go to state 31
    instruccion                    shift and go to state 4
    tipo                           shift and go to state 8
    instruccion_ciclo              shift and go to state 10
    instruccion_abierta            shift and go to state 11
    instruccion_llamar_metodo      shift and go to state 12
    mdecla                         shift and go to state 13
    def_decla                      shift and go to state 14
    variaciones                    shift and go to state 21
    decla_con                      shift and go to state 29
    decla_epsi                     shift and go to state 30

state 3

    (3) lista_metodos -> metodos .

    STRUCT          reduce using rule 3 (lista_metodos -> metodos .)
    IDENTIFICADOR   reduce using rule 3 (lista_metodos -> metodos .)
    GOTO            reduce using rule 3 (lista_metodos -> metodos .)
    LLAA            reduce using rule 3 (lista_metodos -> metodos .)
    CHAR            reduce using rule 3 (lista_metodos -> metodos .)
    INT             reduce using rule 3 (lista_metodos -> metodos .)
    DOUBLE          reduce using rule 3 (lista_metodos -> metodos .)
    FLOAT           reduce using rule 3 (lista_metodos -> metodos .)
    WHILE           reduce using rule 3 (lista_metodos -> metodos .)
    DO              reduce using rule 3 (lista_metodos -> metodos .)
    FOR             reduce using rule 3 (lista_metodos -> metodos .)
    IF              reduce using rule 3 (lista_metodos -> metodos .)
    SWITCH          reduce using rule 3 (lista_metodos -> metodos .)
    BREAK           reduce using rule 3 (lista_metodos -> metodos .)
    CONTINUE        reduce using rule 3 (lista_metodos -> metodos .)
    RETURN          reduce using rule 3 (lista_metodos -> metodos .)
    PRINTF          reduce using rule 3 (lista_metodos -> metodos .)
    $end            reduce using rule 3 (lista_metodos -> metodos .)


state 4

    (4) metodos -> instruccion .

    STRUCT          reduce using rule 4 (metodos -> instruccion .)
    IDENTIFICADOR   reduce using rule 4 (metodos -> instruccion .)
    GOTO            reduce using rule 4 (metodos -> instruccion .)
    LLAA            reduce using rule 4 (metodos -> instruccion .)
    CHAR            reduce using rule 4 (metodos -> instruccion .)
    INT             reduce using rule 4 (metodos -> instruccion .)
    DOUBLE          reduce using rule 4 (metodos -> instruccion .)
    FLOAT           reduce using rule 4 (metodos -> instruccion .)
    WHILE           reduce using rule 4 (metodos -> instruccion .)
    DO              reduce using rule 4 (metodos -> instruccion .)
    FOR             reduce using rule 4 (metodos -> instruccion .)
    IF              reduce using rule 4 (metodos -> instruccion .)
    SWITCH          reduce using rule 4 (metodos -> instruccion .)
    BREAK           reduce using rule 4 (metodos -> instruccion .)
    CONTINUE        reduce using rule 4 (metodos -> instruccion .)
    RETURN          reduce using rule 4 (metodos -> instruccion .)
    PRINTF          reduce using rule 4 (metodos -> instruccion .)
    $end            reduce using rule 4 (metodos -> instruccion .)


state 5

    (5) metodos -> STRUCT . IDENTIFICADOR LLAA muhco_decla_struct LLAC
    (51) instruccion -> STRUCT . IDENTIFICADOR IDENTIFICADOR corche PUNTOCOMA

    IDENTIFICADOR   shift and go to state 32


state 6

    (15) instruccion -> IDENTIFICADOR . DOBLEPUNTO
    (52) instruccion -> IDENTIFICADOR . PUNTO IDENTIFICADOR m_igual expresiones PUNTOCOMA
    (25) instruccion_llamar_metodo -> IDENTIFICADOR . PARA listado_parametros PARC PUNTOCOMA
    (81) mdecla -> IDENTIFICADOR .
    (33) variaciones -> IDENTIFICADOR . MASDOBLE
    (34) variaciones -> IDENTIFICADOR . MENOSDOBLE

  ! shift/reduce conflict for PUNTO resolved as shift
    DOBLEPUNTO      shift and go to state 33
    PUNTO           shift and go to state 34
    PARA            shift and go to state 35
    COMA            reduce using rule 81 (mdecla -> IDENTIFICADOR .)
    CORA            reduce using rule 81 (mdecla -> IDENTIFICADOR .)
    IGUAL           reduce using rule 81 (mdecla -> IDENTIFICADOR .)
    MASIGUAL        reduce using rule 81 (mdecla -> IDENTIFICADOR .)
    MENOSIGUAL      reduce using rule 81 (mdecla -> IDENTIFICADOR .)
    PORIGUAL        reduce using rule 81 (mdecla -> IDENTIFICADOR .)
    DIVIGUAL        reduce using rule 81 (mdecla -> IDENTIFICADOR .)
    MODIGUAL        reduce using rule 81 (mdecla -> IDENTIFICADOR .)
    SHIFTIIGUAL     reduce using rule 81 (mdecla -> IDENTIFICADOR .)
    SHIFTDIGUAL     reduce using rule 81 (mdecla -> IDENTIFICADOR .)
    ANDIGUAL        reduce using rule 81 (mdecla -> IDENTIFICADOR .)
    XORIGUAL        reduce using rule 81 (mdecla -> IDENTIFICADOR .)
    ORIGUAL         reduce using rule 81 (mdecla -> IDENTIFICADOR .)
    MASDOBLE        shift and go to state 36
    MENOSDOBLE      shift and go to state 37

  ! PUNTO           [ reduce using rule 81 (mdecla -> IDENTIFICADOR .) ]


state 7

    (17) instruccion -> LLAA . instrucciones LLAC
    (18) instruccion -> LLAA . LLAC
    (13) instrucciones -> . instrucciones instruccion
    (14) instrucciones -> . instruccion
    (15) instruccion -> . IDENTIFICADOR DOBLEPUNTO
    (16) instruccion -> . GOTO IDENTIFICADOR PUNTOCOMA
    (17) instruccion -> . LLAA instrucciones LLAC
    (18) instruccion -> . LLAA LLAC
    (19) instruccion -> . instruccion_ciclo
    (20) instruccion -> . instruccion_abierta
    (21) instruccion -> . instruccion_llamar_metodo
    (51) instruccion -> . STRUCT IDENTIFICADOR IDENTIFICADOR corche PUNTOCOMA
    (52) instruccion -> . IDENTIFICADOR PUNTO IDENTIFICADOR m_igual expresiones PUNTOCOMA
    (53) instruccion -> . mdecla corche arre_str_val m_igual expresiones PUNTOCOMA
    (57) instruccion -> . def_decla
    (30) instruccion_ciclo -> . WHILE PARA expresiones PARC instruccion
    (31) instruccion_ciclo -> . DO instruccion WHILE PARA expresiones PARC PUNTOCOMA
    (32) instruccion_ciclo -> . variaciones
    (35) instruccion_ciclo -> . FOR PARA instruccion expresiones PUNTOCOMA finfor PARC instruccion
    (38) instruccion_abierta -> . IF PARA expresiones PARC instruccion
    (39) instruccion_abierta -> . IF PARA expresiones PARC instruccion ELSE instruccion
    (40) instruccion_abierta -> . SWITCH PARA expresiones PARC LLAA switch_corpo LLAC
    (22) instruccion_llamar_metodo -> . BREAK PUNTOCOMA
    (23) instruccion_llamar_metodo -> . CONTINUE PUNTOCOMA
    (24) instruccion_llamar_metodo -> . RETURN expresiones PUNTOCOMA
    (25) instruccion_llamar_metodo -> . IDENTIFICADOR PARA listado_parametros PARC PUNTOCOMA
    (26) instruccion_llamar_metodo -> . PRINTF PARA listado_parametros PARC PUNTOCOMA
    (80) mdecla -> . mdecla COMA IDENTIFICADOR
    (81) mdecla -> . IDENTIFICADOR
    (58) def_decla -> . decla_con
    (59) def_decla -> . decla_epsi
    (33) variaciones -> . IDENTIFICADOR MASDOBLE
    (34) variaciones -> . IDENTIFICADOR MENOSDOBLE
    (56) decla_con -> . tipo mdecla IGUAL expresiones masinde PUNTOCOMA
    (60) decla_epsi -> . tipo mdecla PUNTOCOMA
    (61) decla_epsi -> . tipo mdecla corchelle pob_val PUNTOCOMA
    (45) tipo -> . CHAR
    (46) tipo -> . INT
    (47) tipo -> . DOUBLE
    (48) tipo -> . FLOAT

    LLAC            shift and go to state 39
    IDENTIFICADOR   shift and go to state 6
    GOTO            shift and go to state 9
    LLAA            shift and go to state 7
    STRUCT          shift and go to state 41
    WHILE           shift and go to state 19
    DO              shift and go to state 20
    FOR             shift and go to state 22
    IF              shift and go to state 23
    SWITCH          shift and go to state 24
    BREAK           shift and go to state 25
    CONTINUE        shift and go to state 26
    RETURN          shift and go to state 27
    PRINTF          shift and go to state 28
    CHAR            shift and go to state 15
    INT             shift and go to state 16
    DOUBLE          shift and go to state 17
    FLOAT           shift and go to state 18

    instrucciones                  shift and go to state 38
    instruccion                    shift and go to state 40
    instruccion_ciclo              shift and go to state 10
    instruccion_abierta            shift and go to state 11
    instruccion_llamar_metodo      shift and go to state 12
    mdecla                         shift and go to state 13
    def_decla                      shift and go to state 14
    variaciones                    shift and go to state 21
    decla_con                      shift and go to state 29
    decla_epsi                     shift and go to state 30
    tipo                           shift and go to state 42

state 8

    (9) metodos -> tipo . IDENTIFICADOR PARA parametros PARC instruccion
    (56) decla_con -> tipo . mdecla IGUAL expresiones masinde PUNTOCOMA
    (60) decla_epsi -> tipo . mdecla PUNTOCOMA
    (61) decla_epsi -> tipo . mdecla corchelle pob_val PUNTOCOMA
    (80) mdecla -> . mdecla COMA IDENTIFICADOR
    (81) mdecla -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 43

    mdecla                         shift and go to state 44

state 9

    (16) instruccion -> GOTO . IDENTIFICADOR PUNTOCOMA

    IDENTIFICADOR   shift and go to state 45


state 10

    (19) instruccion -> instruccion_ciclo .

    STRUCT          reduce using rule 19 (instruccion -> instruccion_ciclo .)
    IDENTIFICADOR   reduce using rule 19 (instruccion -> instruccion_ciclo .)
    GOTO            reduce using rule 19 (instruccion -> instruccion_ciclo .)
    LLAA            reduce using rule 19 (instruccion -> instruccion_ciclo .)
    CHAR            reduce using rule 19 (instruccion -> instruccion_ciclo .)
    INT             reduce using rule 19 (instruccion -> instruccion_ciclo .)
    DOUBLE          reduce using rule 19 (instruccion -> instruccion_ciclo .)
    FLOAT           reduce using rule 19 (instruccion -> instruccion_ciclo .)
    WHILE           reduce using rule 19 (instruccion -> instruccion_ciclo .)
    DO              reduce using rule 19 (instruccion -> instruccion_ciclo .)
    FOR             reduce using rule 19 (instruccion -> instruccion_ciclo .)
    IF              reduce using rule 19 (instruccion -> instruccion_ciclo .)
    SWITCH          reduce using rule 19 (instruccion -> instruccion_ciclo .)
    BREAK           reduce using rule 19 (instruccion -> instruccion_ciclo .)
    CONTINUE        reduce using rule 19 (instruccion -> instruccion_ciclo .)
    RETURN          reduce using rule 19 (instruccion -> instruccion_ciclo .)
    PRINTF          reduce using rule 19 (instruccion -> instruccion_ciclo .)
    $end            reduce using rule 19 (instruccion -> instruccion_ciclo .)
    LLAC            reduce using rule 19 (instruccion -> instruccion_ciclo .)
    MENOS           reduce using rule 19 (instruccion -> instruccion_ciclo .)
    MAS             reduce using rule 19 (instruccion -> instruccion_ciclo .)
    NOTB            reduce using rule 19 (instruccion -> instruccion_ciclo .)
    ANDB            reduce using rule 19 (instruccion -> instruccion_ciclo .)
    NOT             reduce using rule 19 (instruccion -> instruccion_ciclo .)
    PARA            reduce using rule 19 (instruccion -> instruccion_ciclo .)
    ENTERO          reduce using rule 19 (instruccion -> instruccion_ciclo .)
    DECIMAL         reduce using rule 19 (instruccion -> instruccion_ciclo .)
    CADENA          reduce using rule 19 (instruccion -> instruccion_ciclo .)
    CASTINT         reduce using rule 19 (instruccion -> instruccion_ciclo .)
    CASTCHAR        reduce using rule 19 (instruccion -> instruccion_ciclo .)
    CASTFLOAT       reduce using rule 19 (instruccion -> instruccion_ciclo .)
    CASTDOUBLE      reduce using rule 19 (instruccion -> instruccion_ciclo .)
    SCANF           reduce using rule 19 (instruccion -> instruccion_ciclo .)
    ELSE            reduce using rule 19 (instruccion -> instruccion_ciclo .)
    PARC            reduce using rule 19 (instruccion -> instruccion_ciclo .)
    CASE            reduce using rule 19 (instruccion -> instruccion_ciclo .)
    DEFAULT         reduce using rule 19 (instruccion -> instruccion_ciclo .)


state 11

    (20) instruccion -> instruccion_abierta .
